src/assets/scss/main.scss
@import "./_variables.scss";
@import "bootstrap";
@import "./_overrides.scss";
@import "./utilities.scss";
@import "./loaders.scss";

// main {
//   flex-grow: 1;
//   overflow: hidden;
//   background-image: url("src/assets/img/Ocean.jpeg");
//   min-height: 150vh;
//   background-attachment: fixed;
//   background-position: center;
//   background-repeat: no-repeat;
//   background-size: cover;
// }

body {
  margin: 0;
}

main {
  height: 100vh;
  overflow-y: auto;
  overflow-x: hidden;
  perspective: 2px;
}

.no-parallax {
  position: relative;
  z-index: 2;
  transform-style: preserve-3d;
  min-height: 100vh;
}

.parallax {
  position: relative;
  min-height: 100vh;
  transform-style: preserve-3d;
}

.parallax::after {
  content: " ";
  position: absolute;
  top: 0;
  right: 0;
  bottom: 0;
  left: 0;
  transform: translateZ(-1px) scale(1.6);
  background-size: 100%;
  z-index: -1;
}

.bg::after {
  background: url("https://picsum.photos/1080/720");
  background-size: cover;
}

.spacer-10 {
  height: 10vh;
}
.spacer-20 {
  height: 20vh;
}
.spacer-30 {
  height: 30vh;
}

.min-width {
  width: min-content;
}

.tagline {
  margin-top: 3rem;
  margin-bottom: 3rem;
  font-size: 4rem;
}

.before-enter {
  opacity: 0;
  transform: translateY(30%);
  transition: all 0.8s ease;
}

.enter {
  opacity: 1;
  transition-delay: 0.08s;
  transform: translateY(0);
}

.upon-exit {
  opacity: 1;
  transform: translateY(100em);
}

h1 {
  font-size: 5em;
  font-family: "Unna", serif;
}

a {
  text-decoration: none;
}

input,
textarea,
select {
  &:not(:placeholder-shown) {
    &:valid {
      border: 1px solid $success;
    }
    &:invalid {
      border: 1px solid $danger;
    }
  }
}

form:invalid button[type="submit"] {
  filter: grayscale(1);
  pointer-events: none;
}
//Hi Dylan, all you should have to change is the height and img in the components style when re-using the effect
// .parallax {
//   background-image: url("src/assets/img/Ocean.jpeg");
//   min-height: 100vh;
//   background-attachment: fixed;
//   background-position: center;
//   background-repeat: no-repeat;
//   background-size: cover;
//   background: rgba(255, 255, 255, 0);
//   min-height: 100vh;
// }

